--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -7,8 +7,8 @@ upstream init_bot {
 }
 
 server {
-        listen 11076;
-        server_name scsc.jhyub.dev;
+        listen 80;
+        server_name scsc.tteokgook1.net;
 
         location /api {
                 proxy_pass http://init_main;
