fix: add health check of backend to bot for proper startup order

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy
+      backend:
+        condition: service_healthy
 
   redis:
     image: redis:7
