--- a/nginx/init.conf
+++ b/nginx/init.conf
@@ -1,30 +1,65 @@
-upstream init_main {
-        server 127.0.0.1:8080;
+# main deploy
+
+upstream init_backend {
+    server 127.0.0.1:8080;
 }
 
 upstream init_bot {
-        server 127.0.0.1:8081;
+    server 127.0.0.1:8081;
 }
 
 server {
-        listen 80;
-        server_name scsc.tteokgook1.net;
+    listen 80;
+    server_name scsc.tteokgook1.net;
 
-        location /api {
-                proxy_pass http://init_main;
-                proxy_redirect off;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Host $server_name;
-        }
+    location /api {
+        proxy_pass http://init_backend;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
 
-        location / {
-                proxy_pass http://init_bot;
-                proxy_redirect off;
-                proxy_set_header Host $host;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Host $server_name;
-        }
+    location / {
+        proxy_pass http://init_bot;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
+}
+
+# dev deploy
+
+upstream init_dev_backend {
+    server 127.0.0.1:9080;
+}
+
+upstream init_dev_bot {
+    server 127.0.0.1:9081;
+}
+
+server {
+    listen 80;
+    server_name dev.scsc.tteokgook1.net;
+
+    location /api {
+        proxy_pass http://init_dev_backend;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
+
+    location / {
+        proxy_pass http://init_dev_bot; 
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $server_name;
+    }
 }
