--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,12 @@
 services:
   backend:
-    ports:
+    ports: !override
       - "127.0.0.1:9080:8080" # Different host port for dev
     environment:
       - SQLITE_FILENAME=db/dev_database.db
 
   bot:
-    ports:
+    ports: !override
       - "127.0.0.1:9081:8081"
     environment:
       - BACKEND_URL=http://backend:8080 # Uses internal Docker network
