--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Update Submodule Reference
-        if: github.event_type == 'repository_dispatch'
+        if: github.event_type == 'submodule-updated'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
