--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -17,6 +17,9 @@ jobs:
           submodules: true
           fetch-depth: 0
 
+      - name: Check Event Type
+        run: echo "The event type is ${{ github.event_type }} and event name is ${{ github.event_name }}"
+
       - name: Update Submodule Reference
         if: github.event_type == 'submodule-updated'
         run: |
