--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -18,10 +18,10 @@ jobs:
           fetch-depth: 0
 
       - name: Check Event Type
-        run: echo "The event type is ${{ github.event_type }} and event name is ${{ github.event_name }}"
+        run: echo "The event type is ${{ github.event.action }} and event name is ${{ github.event_name }}"
 
       - name: Update Submodule Reference
-        if: github.event_type == 'submodule-updated'
+        if: github.event.action == 'submodule-updated'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
