--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -17,18 +17,24 @@ jobs:
           submodules: true
           fetch-depth: 0
 
-      - name: Check Event Type
-        run: echo "The event type is ${{ github.event.action }} and event name is ${{ github.event_name }}"
-
       - name: Update Submodule Reference
-        if: github.event.action == 'submodule-updated'
+        if: github.event_name == 'repository_dispatch'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git submodule update --remote ${{ github.event.client_payload.submodule }}
+          
+          # Update all submodules to the latest head of their tracked branches
+          git submodule update --remote --recursive
+          
+          # Check if anything changed
           git add .
-          git commit -m "chore: update ${{ github.event.client_payload.submodule }} to latest"
-          git push origin develop
+          if git diff-index --quiet HEAD; then
+            echo "No changes detected in submodules. Skipping commit."
+          else
+            echo "Changes detected. Committing and pushing..."
+            git commit -m "chore: auto-update submodules [skip ci]"
+            git push origin develop
+          fi
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@v1.0.3
