--- a/nginx/init.dev.conf
+++ b/nginx/init.dev.conf
@@ -1,19 +1,19 @@
-# main deploy
+# dev deploy
 
-upstream init_backend {
-    server 127.0.0.1:8080;
+upstream init_dev_backend {
+    server 127.0.0.1:9080;
 }
 
-upstream init_bot {
-    server 127.0.0.1:8081;
+upstream init_dev_bot {
+    server 127.0.0.1:9081;
 }
 
 server {
     listen 80;
-    server_name scsc.tteokgook1.net;
+    server_name dev.scsc.tteokgook1.net;
 
     location /api {
-        proxy_pass http://init_backend;
+        proxy_pass http://init_dev_backend;
         proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -22,7 +22,7 @@ server {
     }
 
     location / {
-        proxy_pass http://init_bot;
+        proxy_pass http://init_dev_bot; 
         proxy_redirect off;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
