:ambulance: hotfix for 0.2.4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,12 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
+      - RABBITMQ_LOGS=warning
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      interval: 3s
+      timeout: 2s
+      retries: 15
 
   bot:
     extends:
