--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
         condition: service_healthy
 
   rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:3-alpine
     networks:
       - app-net
     environment:
@@ -18,9 +18,9 @@ services:
       - RABBITMQ_DEFAULT_PASS=guest
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "ping"]
-      interval: 3s
-      timeout: 2s
-      retries: 15
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   bot:
     extends:
